# bobi_control

./: CMakeLists.txt  README.md  package.xml
config/: APrioriController.cfg  AstolfiController.cfg  LinearSpeedController.cfg  PositionController.cfg  VelocityController.cfg
config/behaviour/: BurstAndCoast.cfg  NaiveBurstAndCoast.cfg
config/test/: circular_trajectory.yaml  eights.yaml  straight_line.yaml
include/bobi_control/: apriori_control.hpp  astolfi_control.hpp  controller_base.hpp  linear_speed_control.hpp  position_control.hpp  velocity_control.hpp
include/bobi_control/behaviour/: burst_and_coast.hpp  naive_burst_and_coast.hpp
include/tools/: archive.hpp
include/tools/random/: random_generator.cpp  random_generator.hpp
launch/: apriori_controller.launch  astolfi_controller.launch  linear_speed_controller.launch  logitech_joy_controller.launch  position_controller.launch  thrustmaster_joy_controller.launch  velocity_controller.launch  wingman_joy_controller.launch
launch/behaviour/: burst_and_coast.launch  dli_interaction.launch  naive_burst_and_coast.launch  timed_perturbation.launch
launch/test/: circular_trajectory_test.launch  eights.launch  straight_line.launch
src/: apriori_controller_node.cpp  astolfi_controller_node.cpp  joy_controller.py  linear_speed_controller_node.cpp  logitech_controller.py  position_controller_node.cpp  thrustmaster_controller.py  velocity_controller_node.cpp
src/behaviour/: burst_and_coast.cpp  dl_interaction.py  naive_burst_and_coast.cpp  timed_perturbation.py
src/test/: circular_trajectory_node.cpp  eights_node.cpp  straight_line_node.cpp
